--- a/solicitacao/templates/index.html
+++ b/solicitacao/templates/index.html
@@ -18,7 +18,7 @@
                 <div class="card" style="width: 17rem; border: solid black ">
                     <img src="{% static 'img/joel.gif' %}" class="card-img-top" alt="">
                     <div class="card-body">
-                      <h3 class="card-title">Joel</h3>
+                      <h3 class="card-title">Joel <i class="fa-solid fa-fish fa-spin"></i></h3> 
 
                       <hr>
                       <p class="card-text">
