--- a/solicitacao/templates/lista/parcial-delete.html
+++ b/solicitacao/templates/lista/parcial-delete.html
@@ -1,16 +1,19 @@
-<form method="post" action="{% url 'js-excluir' solicitacao.pk %}" class="js-delete-form">
+
+<form method="post" action="{% url 'js-excluir' solicitacao.pk %}" class="bg-dark text-white js-delete-form">
     {% csrf_token %}
 
     <div class="modal-header">
-        <h4 class="modal-title">EXCLUIR</h4>
-        <button type="button" class="close" data-dismiss="modal">X</button>
+        <h4 class="modal-title">EXCLUIR SOLICITAÇÃO</h4>
+        <button type="button" class="close" data-dismiss="modal">
+            <i class="fa-solid fa-xmark text-white"></i></button>
     </div>
 
     <div class="modal-body">
-        <p class="lead">Tem certeza que deseja excluir esse evento <strong>{{solicitacao}}</strong>?</p>
+        <p class="lead">Tem certeza que deseja excluir essa solicitação <strong style="color: rgb(233, 99, 99);">{{solicitacao}}</strong>?</p>
     </div>        
 
     <div class="modal-footer">
-        <button type="submit" class="btn btn-primary">Excluir</button>
+        <button type="submit" class="btn btn-danger">Excluir</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
     </div>
 </form>
