--- a/solicitacao/templates/lista/solicitacao.html
+++ b/solicitacao/templates/lista/solicitacao.html
@@ -31,13 +31,13 @@
 
                 <div class="col-md-4">
                     <!-- SOLICITAÇÃO CREATE  -->
-                    <a href="{% url 'criar-solicitacao' %}" class="btn btn-secondary btn-sm"> 
+                    <a href="{% url 'criar-solicitacao' %}" class="btn btn-secondary"> 
                         <strong>NOVA SOLICITAÇÃO - OLD</strong></a>
                 </div>
 
                 <div class="col-md-4">
                     <!-- AJAX -->
-                    <button type="button" class="btn btn-secondary btn-sm js-create" data-url="{% url 'js-criar' %}">
+                    <button type="button" class="btn btn-secondary js-create" data-url="{% url 'js-criar' %}">
                         <strong>NOVA SOLICITAÇÃO - AJAX</strong></button>
                     <div class="modal fade" id="modal-evento">
                         <div class="modal-dialog">
@@ -61,7 +61,7 @@
     <div class="table-responsive">
         <table class="table table-striped table-dark table-hover table-borderless">
             <thead>
-                <th>Nome</th>
+                <th>Usuario</th>
                 <th>Matricula</th>
                 <th>Status</th>
                 <th>Justificativa</th>
@@ -84,7 +84,6 @@
     <div class="table-responsive">
         <table id="table-evento" class="table table-striped table-dark table-hover table-borderless">
             <thead>
-                <th>Aluno</th>
                 <th>Status</th>
                 <th>Justificativa</th>
                 <th>Data</th>
@@ -108,7 +107,7 @@
         <!-- PRIMEIRA -->
             {% if page_obj.number != 1 %}
             <li class="page-item">
-                <a class="page-link text-white bg-dark" href="?page=1"><strong>&laquo</strong></a>
+                <a class="page-link text-white bg-dark" href="?page=1"><i class="fa-solid fa-angles-left"></i></a>
             {%else%}
 
             {%endif%}
@@ -127,22 +126,22 @@
         <!-- PÁGINA ATUAL -->
           <li class="page-item disabled">
             <div class="page-link current text-white bg-dark">
-                PÁGINA {{ page_obj.number }} DE {{ page_obj.paginator.num_pages }}</div></li>
+                PÁGINA {{ page_obj.number }} / {{ page_obj.paginator.num_pages }}</div></li>
 
         <!-- PROXIMA PAGINA -->
             {% if page_obj.has_next %}
             <li class="page-item">
                 <a class="page-link text-white bg-dark" href="?page={{ page_obj.next_page_number }}">PRÓXIMA</a>
-            {% else %}
+            {%else%}
             <li class="page-item disabled">
                 <a class="page-link text-ligth bg-dark" href="#">PRÓXIMA</a>
-            {% endif %}
+            {%endif%}
             </li>
 
             <!-- ULTIMA -->
             {% if page_obj.number != page_obj.paginator.num_pages %}
             <li class="page-item">
-                <a class="page-link text-white bg-dark" href="?page={{ page_obj.paginator.num_pages }}"><strong>&raquo</strong></a>
+                <a class="page-link text-white bg-dark" href="?page={{ page_obj.paginator.num_pages }}"><i class="fa-solid fa-angles-right"></i></a>
             {%else%}
 
             {%endif%}
