--- a/solicitacao/templates/lista/usuario.html
+++ b/solicitacao/templates/lista/usuario.html
@@ -48,14 +48,14 @@
         </table>
     </div>
 
-    <!-- PAGINAÇÃO -->
-    <nav aria-label="Page navigation example">
+     <!-- PAGINAÇÃO -->
+     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
 
         <!-- PRIMEIRA -->
             {% if page_obj.number != 1 %}
             <li class="page-item">
-                <a class="page-link text-white bg-dark" href="?page=1"><strong>&laquo</strong></a>
+                <a class="page-link text-white bg-dark" href="?page=1"><i class="fa-solid fa-angles-left"></i></a>
             {%else%}
 
             {%endif%}
@@ -74,22 +74,22 @@
         <!-- PÁGINA ATUAL -->
           <li class="page-item disabled">
             <div class="page-link current text-white bg-dark">
-                PÁGINA {{ page_obj.number }} DE {{ page_obj.paginator.num_pages }}</div></li>
+                PÁGINA {{ page_obj.number }} / {{ page_obj.paginator.num_pages }}</div></li>
 
         <!-- PROXIMA PAGINA -->
             {% if page_obj.has_next %}
             <li class="page-item">
                 <a class="page-link text-white bg-dark" href="?page={{ page_obj.next_page_number }}">PRÓXIMA</a>
-            {% else %}
+            {%else%}
             <li class="page-item disabled">
                 <a class="page-link text-ligth bg-dark" href="#">PRÓXIMA</a>
-            {% endif %}
+            {%endif%}
             </li>
 
             <!-- ULTIMA -->
             {% if page_obj.number != page_obj.paginator.num_pages %}
             <li class="page-item">
-                <a class="page-link text-white bg-dark" href="?page={{ page_obj.paginator.num_pages }}"><strong>&raquo</strong></a>
+                <a class="page-link text-white bg-dark" href="?page={{ page_obj.paginator.num_pages }}"><i class="fa-solid fa-angles-right"></i></a>
             {%else%}
 
             {%endif%}
