--- a/solicitacao/templates/modelo.html
+++ b/solicitacao/templates/modelo.html
@@ -12,6 +12,8 @@
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <link href="{% static 'fontawesomefree/css/all.min.css' %}" rel="stylesheet" type="text/css">
  
 </head>
 <body>
@@ -57,8 +59,8 @@
           <a href="{% url 'registrar' %}" class="btn btn-outline-light">Cadastre-se</a>
           
           {% endif %}
-          
-          <strong class="text-white p-3">{{ request.user }}</strong>
+          <i class="fa-solid fa-user p-2 text-white"></i> <strong class="p-2 text-white">{{ request.user }}</strong> 
+           
         </div>
       </div>
   </nav>
@@ -83,7 +85,7 @@
     {% block rodape %}
     <footer class="footer md-12 py-3 bg-body-tertiary bg-dark text-white absolute-bottom">
       <div class="container">
-        <span class="text-body-secondary">iNFOMúSiCA</span>
+        <i class="fa-solid fa-guitar fa-2xl   "></i> <span class="text-body-secondary">iNFOMúSiCA</span>
       </div>
     </footer>
     {% endblock %}
