--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,11 @@
 body{
     background-color: #e5e5e5;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
-
+h1 {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+}
 #box{
     background-color: #232834;
     width: 50% ;
