--- a/solicitacao/templates/form.html
+++ b/solicitacao/templates/form.html
@@ -8,7 +8,7 @@
 
 {% block conteudo %}
 <div class="container">
-    <div class="justify-content-center m-5 p-5 text-white " id="box">
+    <div class="my-5 mx-auto top-50 p-5  text-white " id="box">
     <h3>Criar Solicitação</h3>
     <p class='lead'> Preencha todos os campos obrigatórios.</p>
 
