--- a/solicitacao/templates/login.html
+++ b/solicitacao/templates/login.html
@@ -13,8 +13,8 @@
 {% endblock %}
 
 {% block conteudo %}
-<div class="container">
-    <div class="justify-content-center m-5 p-5 text-white " id="box">
+<div class="container ">
+    <div class="my-5 mx-auto top-50 p-5 text-white " id="box">
         {% if request.user.is_authenticated %}
         <h3>
             Ação não permitida!</h3>
