--- a/solicitacao/templates/form-excluir.html
+++ b/solicitacao/templates/form-excluir.html
@@ -7,7 +7,7 @@
 
 {% block conteudo %}
 <div class="container">
-    <div class="justify-content-center m-5 p-5 text-white " id="box">
+    <div class="my-5 mx-auto top-50 p-5 text-white " id="box">
     <h3>Excluir Solicitação</h3>
     <p class='lead'> Confirme para excluir o registro definitivamente.</p>
 
