--- a/solicitacao/templates/lista/solicitacao.html
+++ b/solicitacao/templates/lista/solicitacao.html
@@ -12,21 +12,22 @@
     <hr>
     <div class="row">
         <div class="col-md-12">
-            <div class="row">
+            <div class="row d-flex align-items-center">
 
                 <div class="col-md-4">
                 <!-- FILTRO -->
-                    <strong>FILTRO</strong>
-                    <select class="custom-select" aria-label="Select Menu" onchange="window.location.href=this.value;" style="width: 200px;">
-                        <option selected>
-                            -----</option>
-                        <option value="?filtro_data=todas">
+                    <div class="form-floating">
+                    <select class="form-select " id="floatingSelect" aria-label="Select Menu" onchange="window.location.href=this.value;" style="width: 200px;">
+                        <option selected> </option>
+                        <option value="?filtro_data=todas" {% if 'todas' in request.GET.filtro_data|default:'' %}selected{% endif %}>
                             Todas</option>
-                        <option value="?filtro_data=ultima_semana">
+                        <option value="?filtro_data=ultima_semana" {% if 'ultima_semana' in request.GET.filtro_data %}selected{% endif %}>
                             Última semana</option>
-                        <option value="?filtro_data=ultimo_mes">
+                        <option value="?filtro_data=ultimo_mes" {% if 'ultimo_mes' in request.GET.filtro_data %}selected{% endif %}>
                             Último mês</option>
                     </select>
+                    <label for="floatingSelect">FILTRO</label>
+                    </div>  
                 </div>
 
                 <div class="col-md-4">
@@ -40,7 +41,7 @@
                     <button type="button" class="btn btn-secondary js-create" data-url="{% url 'js-criar' %}">
                         <strong>NOVA SOLICITAÇÃO - AJAX</strong></button>
                     <div class="modal fade" id="modal-evento">
-                        <div class="modal-dialog">
+                        <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content">
                                 
                             </div>
@@ -60,7 +61,7 @@
     <!-- ADM TABLE -->
     <div class="table-responsive">
         <table class="table table-striped table-dark table-hover table-borderless">
-            <thead>
+            <thead class="text-uppercase">
                 <th>Usuario</th>
                 <th>Matricula</th>
                 <th>Status</th>
@@ -83,7 +84,7 @@
     <!-- USER TABLE -->
     <div class="table-responsive">
         <table id="table-evento" class="table table-striped table-dark table-hover table-borderless">
-            <thead>
+            <thead class="text-uppercase">
                 <th>Status</th>
                 <th>Justificativa</th>
                 <th>Data</th>
