--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,8 @@ h1 {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
 }
 #box{
-    background-color: #232834;
-    width: 50% ;
+    background-color: #2a3449;
+    width: 550px ;
+    border: 5px outset #ffffff;
+    border-radius: 30px;
 }
