--- a/reserva/templates/form-excluir.html
+++ b/reserva/templates/form-excluir.html
@@ -2,13 +2,13 @@
 {% load static %}
 
 {% block titulo %}
-<title>Excluir Solicitação</title>
+<title>{{Titulo}}</title>
 {% endblock %}
 
 {% block conteudo %}
 <div class="container">
     <div class="my-5 mx-auto top-50 p-5 text-white " id="box">
-    <h3>Excluir Solicitação</h3>
+    <h3>{{Titulo}}</h3>
     <p class='lead'> Confirme para excluir o registro definitivamente.</p>
 
     <hr>
