--- a/reserva/templates/form.html
+++ b/reserva/templates/form.html
@@ -3,13 +3,13 @@
 {% load crispy_forms_tags %}
 
 {% block titulo %}
-<title>Criar Solicitação</title>
+<title>{{Titulo}}</title>
 {% endblock %}
 
 {% block conteudo %}
 <div class="container">
     <div class="my-5 mx-auto top-50 p-5  text-white " id="box">
-    <h3>Criar Solicitação</h3>
+    <h3>{{Titulo}}</h3>
     <p class='lead'> Preencha todos os campos obrigatórios.</p>
 
     <hr>
@@ -20,8 +20,13 @@
         {{ form|crispy}}
         {{ profile_form|crispy}}
 
-        <button type="submit" class="btn btn-primary"> Enviar</button>
+
+        <div class="row">
+            <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-dark mx-auto col-md-5">Voltar</a>
+            <button type="submit" class="btn btn-success mx-auto col-md-5"> Enviar</button>
+        </div>
     </form>
+       
     </div>
 </div>
 {% endblock %}
