--- a/reserva/templates/lista/solicitacao.html
+++ b/reserva/templates/lista/solicitacao.html
@@ -64,7 +64,7 @@
 
     <!-- ADM TABLE -->
     <div class="table-responsive">
-        <table class="table table-striped table-dark table-hover table-borderless">
+        <table id=""  class="table table-striped table-dark table-hover table-borderless table-evento">
             <thead class="text-uppercase">
                 <th>Usuario</th>
                 <th>Matricula</th>
@@ -77,7 +77,7 @@
             </thead>
             
             <tbody>
-                {% include 'lista/adm-parcial-list.html' %}    
+                {% include 'lista/parcial-list.html' %}    
             </tbody>
             
         </table>
@@ -87,7 +87,7 @@
 
     <!-- USER TABLE -->
     <div class="table-responsive">
-        <table id="table-evento" class="table table-striped table-dark table-hover table-borderless">
+        <table id="" class="table table-striped table-dark table-hover table-borderless table-evento">
             <thead class="text-uppercase">
                 <th>Status</th>
                 <th>Justificativa</th>
@@ -127,7 +127,7 @@
                 <a class="page-link text-ligth bg-dark" href="#">ANTERIOR</a>
             {%endif%}
             </li>
-
+ 
         <!-- PÁGINA ATUAL -->
           <li class="page-item disabled">
             <div class="page-link current text-white bg-dark">
