--- a/reserva/templates/lista/solicitacao.html
+++ b/reserva/templates/lista/solicitacao.html
@@ -58,13 +58,12 @@
     </div>
 
     <hr>
-    
+
+    <div class="table-responsive">
+        <table id="table-evento" class="table table-striped table-dark table-hover table-borderless">
+            
     {% for group in request.user.groups.all %}
     {% if group.name == 'Admin' %}
-
-    <!-- ADM TABLE -->
-    <div class="table-responsive">
-        <table id=""  class="table table-striped table-dark table-hover table-borderless table-evento">
             <thead class="text-uppercase">
                 <th>Usuario</th>
                 <th>Matricula</th>
@@ -75,19 +74,7 @@
                 <th>Postado em</th>
                 <th>Opções</th>
             </thead>
-            
-            <tbody>
-                {% include 'lista/parcial-list.html' %}    
-            </tbody>
-            
-        </table>
-    </div>
-
-    {% else %}
-
-    <!-- USER TABLE -->
-    <div class="table-responsive">
-        <table id="" class="table table-striped table-dark table-hover table-borderless table-evento">
+    {%else%}
             <thead class="text-uppercase">
                 <th>Status</th>
                 <th>Justificativa</th>
@@ -96,15 +83,14 @@
                 <th>Opções</th>
             </thead>
             
+    {%endif%}
+    {%endfor%}
             <tbody>
                 {%  include 'lista/parcial-list.html'  %}    
             </tbody>
         </table>
     </div>
 
-    {% endif %}
-    {% endfor %}
-    
     <!-- PAGINAÇÃO -->
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
@@ -127,7 +113,7 @@
                 <a class="page-link text-ligth bg-dark" href="#">ANTERIOR</a>
             {%endif%}
             </li>
- 
+
         <!-- PÁGINA ATUAL -->
           <li class="page-item disabled">
             <div class="page-link current text-white bg-dark">
