--- a/reserva/templates/modelo.html
+++ b/reserva/templates/modelo.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+
     {% block titulo %}
     <title>Página Modelo</title>
     {% endblock %}
