atualização de frontend

--- a/reserva/templates/form-excluir.html
+++ b/reserva/templates/form-excluir.html
@@ -19,7 +19,10 @@
         <p>
         Deseja excluir o registro: <b>{{ object }}</b>?</p>
 
-        <button type="submit" class="btn btn-danger"> Excluir</button>
+        <div class="row">
+            <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-dark mx-auto col-md-5">Voltar</a>
+            <button type="submit" class="btn btn-danger mx-auto col-md-5"> Excluir</button>
+        </div>
     </form>
     </div>
 </div>
