--- a/reserva/templates/index.html
+++ b/reserva/templates/index.html
@@ -6,73 +6,21 @@
 {% endblock %}
     
 {% block conteudo %}
-<div class="container my-3">
+<div  class="container-fluid">
+    <div id="dashboardContainer" class="container">
     <h1>
         Página Inicial</h1>  
+    
     <hr>
     
-    <div>
-        <h2>
-            <a class="btn btn-secondary btn-lg" href="{% url 'criar-solicitacao' %}">
-                <strong>CRIAR SOLICITAÇÃO</strong></a></h2>
-                <p class="lead"> Solicite um horário para reservar a Sala de Música.</p>
-    </div>
+    <div class="d-flex align-items-center">
+            <a id="createButton" class="" href="{% url 'criar-solicitacao' %}">
+                <strong>Solicite um horário para reservar a Sala de Música.</strong></a>
 
+    </div>
+      
     <hr>
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-4">
-
-                <div class="card" style="width: 17rem; border: solid black ">
-                    <img src="{% static 'img/joel.gif' %}" class="card-img-top" alt="">
-                    <div class="card-body">
-                      <h3 class="card-title">Joel <i class="fa-solid fa-fish fa-spin"></i></h3> 
-
-                      <hr>
-                      <p class="card-text">
-                        <strong>
-                            PatchNotes Reserva v0.1.2</strong>
-                            <ul style="font-size: small ;">
-                                <li>CRUD de Solicitações</li>
-                                <li>Navegação de Páginas</li>
-                                <li>Gerencimento de Solicitações</li>
-                                <li>CRUD de Usuarios</li>
-                                <li>Nova Paginação</li>
-                                <li>CRUD com AJAX</li>
-                            </ul>
-                      </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-
-                <div class="card" style="width: 17rem; border: solid black ">
-                    <img src="{% static 'img/pat-moonless.gif' %}" class="card-img-top" alt="">
-                    <div class="card-body">
-                      <h3 class="card-title">MOONLESS ! !!</h3>
-                      <p class="card-text">EU AMO A MOONLESS</p>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="col-md-4">
-
-                <div class="card" style="width: 17rem; border: solid black ">
-                    <img src="{% static 'img/cirilo.gif' %}" class="card-img-top" alt="">
-                    <div class="card-body">
-                      <h3 class="card-title">DIEGO CIRILO</h3>
-                      <p class="card-text">Guitarist from Jubarte Ataca</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
     </div>
-        
-    <hr>
-
 </div>
 {% endblock %}
