--- a/reserva/templates/lista/parcial-list.html
+++ b/reserva/templates/lista/parcial-list.html
@@ -1,20 +1,23 @@
 {% for solicitacao in object_list %}
 
 <tr>
-
-    {% if solicitacao.status == 'PEN' %}
-        <td><i class="fa-regular fa-circle"></i>  {{ solicitacao.get_status_display }}</td>
-    {% elif solicitacao.status == 'APR' %}
-        <td><i class="fa-regular fa-circle-check" style="color: #5fce37;"></i> {{ solicitacao.get_status_display }}</td>
-    {% elif solicitacao.status == 'REJ' %}
-        <td><i class="fa-regular fa-circle-xmark" style="color: #ef5b5b;"></i> {{ solicitacao.get_status_display }}</td>
+    <td>
+    {% if solicitacao.status.id == 1 %}
+        <i class="fa-regular fa-circle"></i>  
+    {% elif solicitacao.status.id == 2 %}
+        <i class="fa-regular fa-circle-xmark" style="color: #ef5b5b;"></i>  
+    {% elif solicitacao.status.id == 3 %}
+        <i class="fa-regular fa-circle-check" style="color: #5fce37;"></i>  
     {%endif%}
+
+    {{solicitacao.status}}</td>
 
     <td>{{ solicitacao.justificativa }}</td>
     <td>{{ solicitacao.data|date:'d/m/Y' }}</td>
     <td>{{ solicitacao.hora }}</td>
                 
     <td>
+        <div class="d-flex">
         <button 
         type="button"
         class="btn btn-secondary btn-sm mx-1 js-update"
@@ -24,7 +27,7 @@
         type="button" 
         class="btn btn-danger btn-sm mx-1 js-delete" 
         data-url="{% url 'js-excluir' solicitacao.pk %}"><i class="fa-solid fa-trash"></i></button>
-    
+        </div>
     </td>
 </tr>
             
