--- a/reserva/templates/lista/parcial-delete.html
+++ b/reserva/templates/lista/parcial-delete.html
@@ -1,5 +1,5 @@
 
-<form method="post" action="{% url 'js-excluir' solicitacao.pk %}" class="js-delete-form" >
+<form method="post" action="{% url 'js-excluir' solicitacao.pk %}" class="js-delete-form" id="modalSolicitacao" data-bs-theme="dark">
     {% csrf_token %}
 
     <div class="modal-header">
