--- a/reserva/templates/lista/solicitacao.html
+++ b/reserva/templates/lista/solicitacao.html
@@ -6,7 +6,8 @@
 {% endblock %}
 
 {% block conteudo %}
-<div class="container my-3">
+<div class="container-fluid">
+<div id="solicitacaoContainer" class="container">
     <h1>Lista de Solicitações</h1>
     
     <hr>
@@ -16,9 +17,8 @@
 
                 <div class="col-md-4">
                 <!-- FILTRO -->
-                    <div class="form-floating">
-                    <select class="form-select " id="floatingSelect" aria-label="Select Menu" onchange="window.location.href=this.value;" style="width: 200px;">
-                        <option selected> </option>
+                Filtro de Data
+                    <select class="form-select bg-dark text-white" id="floatingSelect" aria-label="Select Menu" onchange="window.location.href=this.value;" style="width: 200px;">
                         <option value="?filtro_data=todas" {% if 'todas' in request.GET.filtro_data|default:'' %}selected{% endif %}>
                             Todas</option>
                         <option value="?filtro_data=ultima_semana" {% if 'ultima_semana' in request.GET.filtro_data %}selected{% endif %}>
@@ -30,8 +30,7 @@
                         <option value="?filtro_data=prox_mes" {% if 'prox_mes' in request.GET.filtro_data %}selected{% endif %}>
                             Próximo mês</option>
                     </select>
-                    <label for="floatingSelect">FILTRO</label>
-                    </div>  
+                    
                 </div>
 
                 <div class="col-md-4">
@@ -60,7 +59,7 @@
     <hr>
 
     <div class="table-responsive">
-        <table id="table-evento" class="table table-striped table-dark table-hover table-borderless">
+        <table id="table-evento" class="table table-striped table-dark table-hover table-border">
             
     {% for group in request.user.groups.all %}
     {% if group.name == 'Admin' %}
@@ -116,7 +115,7 @@
                 <a class="page-link text-white bg-dark" href="?page={{ page_obj.previous_page_number }}">ANTERIOR</a>
             {%else%}
             <li class="page-item disabled">
-                <a class="page-link text-ligth bg-dark" href="#">ANTERIOR</a>
+                <a class="page-link text-white-50 bg-dark" href="#">ANTERIOR</a>
             {%endif%}
             </li>
 
@@ -131,7 +130,7 @@
                 <a class="page-link text-white bg-dark" href="?page={{ page_obj.next_page_number }}">PRÓXIMA</a>
             {%else%}
             <li class="page-item disabled">
-                <a class="page-link text-ligth bg-dark" href="#">PRÓXIMA</a>
+                <a class="page-link text-white-50 bg-dark" href="#">PRÓXIMA</a>
             {%endif%}
             </li>
 
@@ -145,7 +144,7 @@
             </li>
         </ul>
       </nav>
-    
+</div>   
 </div>
 {% endblock %}
 
