--- a/reserva/templates/lista/status-parcial-update.html
+++ b/reserva/templates/lista/status-parcial-update.html
@@ -1,15 +1,15 @@
 {% load crispy_forms_tags %}
 
-<form method="post" action="{% url 'js-editar' form.instance.pk %}" class="js-update-form" id="modalSolicitacao" data-bs-theme="dark">
+<form method="post" action="{% url 'js-editar-status' form.instance.pk %}" class="js-update-form" id="modalSolicitacao" data-bs-theme="dark">
     {% csrf_token %}
 
     <div class="modal-header">
-        <h4 class="modal-title">EDITAR SOLICITAÇÃO</h4>
+        <h4 class="modal-title">ATUALIZAR STATUS</h4>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
     </div>
 
     <div class="modal-body">
-        <strong style="color: #20399e">{{form.instance}}</strong>  
+        <strong style="color: #3339b7">{{form.instance}}</strong>  
         <p class='lead'> Preencha todos os campos obrigatórios.</p>
         {{ form|crispy }}
     </div>
