--- a/reserva/templates/index.html
+++ b/reserva/templates/index.html
@@ -5,22 +5,87 @@
 <title>Página Inicial</title>
 {% endblock %}
     
+{% block menu %} {%endblock%}
+
 {% block conteudo %}
-<div  class="container-fluid">
-    <div id="dashboardContainer" class="container">
-    <h1>
-        Página Inicial</h1>  
-    
-    <hr>
-    
-    <div class="d-flex align-items-center">
-            <a id="createButton" class="" href="{% url 'criar-solicitacao' %}">
-                <strong>Solicite um horário para reservar a Sala de Música.</strong></a>
+<!-- indexContainer -->
+<div id="page-top" class="container-fluid">
+    <nav id="indexNavbar" class="navbar navbar-expand-lg fixed-top">
+        <div class="container px-5">
+            <a class="navbar-brand" href="#page-top"><h1 id="navbarLogo" class="fs-4"><span class="bg-white rounded shadow px-2 me-2"><i class="fa-solid fa-guitar text-dark"></i></span>
+                <span>iNFO MúSiCA</span></h1></a>
 
-    </div>
-      
-    <hr>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa-solid fa-bars text-white"></i></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="{% url 'registrar' %}">Sing up</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="{% url 'logout' %}">Login</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Header-->
+    <header id="titleIndex" class="masthead text-center text-white" style="background-image: url({% static 'img/bg-index.png'%})">
+        <div class="masthead-content">
+            <div class="container px-5">
+                <h1 class="masthead-heading mb-0">Muito Rock</h1>
+                <h2 class="masthead-subheading mb-0">E o projeto? Nada ainda?</h2>
+                <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">SAIBA MAIS</a>
+            </div>
+        </div>
+    </header>
 
+
+    <div id="indexSection">
+    <!-- Content section 1-->
+    <section id="scroll">
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="{% static 'img/cirilo.gif'%}" alt="..." /></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">For those about to rock...</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Content section 2-->
+    <section>
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-6">
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="{% static 'img/pat-moonless.gif'%}" alt="..." /></div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="p-5">
+                        <h2 class="display-4">We salute you!</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Content section 3-->
+    <section>
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><img class="img-fluid rounded-circle" src="{% static 'img/joel.gif'%}" alt="..." /></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">Let there be rock!</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+        
     </div>
 </div>
 {% endblock %}
