--- a/reserva/templates/lista/solicitacao.html
+++ b/reserva/templates/lista/solicitacao.html
@@ -11,50 +11,47 @@
     <h1>Lista de Solicitações</h1>
     
     <hr>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="row d-flex align-items-center">
 
-                <div class="col-md-4">
-                <!-- FILTRO -->
-                Filtro de Data
-                    <select class="form-select bg-dark text-white" id="floatingSelect" aria-label="Select Menu" onchange="window.location.href=this.value;" style="width: 200px;">
-                        <option value="?filtro_data=todas" {% if 'todas' in request.GET.filtro_data|default:'' %}selected{% endif %}>
-                            Todas</option>
-                        <option value="?filtro_data=ultima_semana" {% if 'ultima_semana' in request.GET.filtro_data %}selected{% endif %}>
-                            Última semana</option>
-                        <option value="?filtro_data=ultimo_mes" {% if 'ultimo_mes' in request.GET.filtro_data %}selected{% endif %}>
-                            Último mês</option>
-                        <option value="?filtro_data=prox_semana" {% if 'prox_semana' in request.GET.filtro_data %}selected{% endif %}>
-                            Próxima semana</option>
-                        <option value="?filtro_data=prox_mes" {% if 'prox_mes' in request.GET.filtro_data %}selected{% endif %}>
-                            Próximo mês</option>
-                    </select>
-                    
-                </div>
+    <div class="row d-flex align-items-center">
+		<div class="col-md-10 my-1">
 
-                <div class="col-md-4">
-                    <!-- SOLICITAÇÃO CREATE  -->
-                    <a href="{% url 'criar-solicitacao' %}" class="btn btn-secondary"> 
-                        <strong>CRIAR NOVA SOLICITAÇÃO</strong></a>
-                </div>
+            <!-- Filtro de Data -->
+                <select class="form-select bg-dark text-white" 
+                        data-bs-toggle="tooltip" 
+                        data-bs-placement="top"
+                        data-bs-custom-class="custom-tooltip"
+                        data-bs-title="Filtro de Data" 
+                        id="floatingSelect" 
+                        aria-label="Select Menu" 
+                        onchange="window.location.href=this.value;" 
+                        style="width: 200px;">
+                    <option value="?filtro_data=todas" {% if 'todas' in request.GET.filtro_data|default:'' %}selected{% endif %}>
+                        Todas</option>
+                    <option value="?filtro_data=ultima_semana" {% if 'ultima_semana' in request.GET.filtro_data %}selected{% endif %}>
+                        Última semana</option>
+                    <option value="?filtro_data=ultimo_mes" {% if 'ultimo_mes' in request.GET.filtro_data %}selected{% endif %}>
+                        Último mês</option>
+                    <option value="?filtro_data=prox_semana" {% if 'prox_semana' in request.GET.filtro_data %}selected{% endif %}>
+                        Próxima semana</option>
+                    <option value="?filtro_data=prox_mes" {% if 'prox_mes' in request.GET.filtro_data %}selected{% endif %}>
+                        Próximo mês</option>
+                </select>
+		</div>
+		<div class="col-md-2 my-1">
 
-                <div class="col-md-4">
-                    <!-- AJAX -->
-                    <button type="button" class="btn btn-secondary js-create" data-url="{% url 'js-criar' %}">
-                        <strong>NOVA SOLICITAÇÃO - AJAX</strong></button>
-                    <div class="modal fade" id="modal-evento">
-                        <div class="modal-dialog modal-dialog-centered">
-                            <div class="modal-content">
-                                
-                            </div>
-                        </div>
+            <button type="button" class="btn btn-secondary js-create" data-url="{% url 'js-criar' %}">
+                <strong>NOVA SOLICITAÇÃO</strong></button>
+            <div class="modal fade" id="modal-evento">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        
                     </div>
                 </div>
-
             </div>
-        </div>
-    </div>
+
+		</div>
+	</div>
+
 
     <hr>
 
