--- a/reserva/templates/navbar.html
+++ b/reserva/templates/navbar.html
@@ -62,17 +62,26 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
 
+                        {% if request.user.is_authenticated %}
                         <li class="nav-item dropdown-center">
                             <a class="btn dropdown-toggle " href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 {{request.user}}
                               </a>
                             
                               <ul id="profileNavbar" class="dropdown-menu dropdown-menu-end">
-                                <li><a class="dropdown-item" href="">Meu Perfil</a></li>
+                                <li><a class="dropdown-item" href="{% url 'perfil' %}">Meu Perfil</a></li>
                                 <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                               </ul>
                         </li>
-
+                        {%else%}
+                        <li class="nav-item">
+                            <a href="{% url 'logout' %}" class="btn">Login</a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a href="{% url 'registrar' %}" class="btn">Sing Up</a>
+                        </li>
+                        {%endif%}
                     </ul>
 
                 </div>
